force-app/main/default/objects/Product2/fields/BaseUnit__c.field-meta.xml
<CustomField>
    <fullName>BaseUnit__c</fullName>
    <label>Base Unit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>