force-app/main/default/objects/Product2/fields/ColorSurface__c.field-meta.xml
<CustomField>
    <fullName>ColorSurface__c</fullName>
    <label>Surface / Colour</label>
    <type>TextArea</type>
</CustomField>