force-app/main/default/objects/Product2/fields/ItemClassification__c.field-meta.xml
<CustomField>
    <fullName>ItemClassification__c</fullName>
    <label>Item Price Classification</label>
    <length>100</length>
    <type>Text</type>
</CustomField>