force-app/main/default/objects/Product2/fields/ItemGroup__c.field-meta.xml
<CustomField>
    <fullName>ItemGroup__c</fullName>
    <label>Item Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>