force-app/main/default/objects/Product2/fields/LenghtMax__c.field-meta.xml
<CustomField>
    <fullName>LenghtMax__c</fullName>
    <label>Lenght max</label>
    <length>255</length>
    <type>Text</type>
</CustomField>