force-app/main/default/objects/Product2/fields/LengthMax__c.field-meta.xml
<CustomField>
    <fullName>LengthMax__c</fullName>
    <label>Length max</label>
    <length>255</length>
    <type>Text</type>
</CustomField>