force-app/main/default/objects/Product2/fields/Long_Description_DE__c.field-meta.xml
<CustomField>
    <fullName>Long_Description_DE__c</fullName>
    <label>Long Description DE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>