force-app/main/default/objects/Product2/fields/MaterialGroup__c.field-meta.xml
<CustomField>
    <fullName>MaterialGroup__c</fullName>
    <label>Material Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12 - THERM + Stahl</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>