force-app/main/default/objects/Product2/fields/NetWeight__c.field-meta.xml
<CustomField>
    <fullName>NetWeight__c</fullName>
    <label>Net weight (per linear meter)</label>
    <type>TextArea</type>
</CustomField>