force-app/main/default/objects/Product2/fields/Short_Description_DE__c.field-meta.xml
<CustomField>
    <fullName>Short_Description_DE__c</fullName>
    <label>Short Description DE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>