force-app/main/default/objects/Product2/fields/Short_Description_FR__c.field-meta.xml
<CustomField>
    <fullName>Short_Description_FR__c</fullName>
    <label>Short Description FR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>